@@ -1,4 +1,16 @@
 Introduction
 ============
 
-This is a content-type that contains bibliography
+This is a bilbiography container. Can contain references to books, publications
+and magazines.
+
+It was an experiment.
+
+
+Changelog
+===========
+
+0.1 - Unreleased
+..................
+
+* Initial release. First release to the public.
